Standardisation, correction of prices, removal of the word invest

--- a/au/coins.html
+++ b/au/coins.html
@@ -299,7 +299,7 @@
                                 </p>                                    </div>
                              <div class="sections">
                                  <h4 id="3">Q: Is EthPyramid secure?</h4>
-                                 <p>Yes. Our dev team put a lot of hours into code work and testing to make sure your tokens are safe. Internal functions of the contract are not accessible to the end user.<p>
+                                 <p>Yes. Our dev team put a lot of time into refining and testing this contract to make sure your tokens are safe. Internal functions of the contract are not accessible to the end user.<p>
                               </div>
                              <div class="sections">
                                 <h4 id="4">Q: What do I need to buy into this Pyramid?</h4>
@@ -307,7 +307,7 @@
                              </div>
                              <div class="sections">
                                 <h4 id="5">Q: Is this coin pre-mined?</h4>
-                                <p>A: No, Nor are there any loops in the code that allow us to take ETH out of the contract in any ways that you yourself are not capable of.</p>
+                                <p>A: No. Nor are there any loops in the code that allow us to take Ether out of the contract in any ways that you yourself are not capable of.</p>
                              </div>
 							 </div>
                 <div id="root"></div>
