--- a/au/index.html
+++ b/au/index.html
@@ -149,7 +149,7 @@
                             </div>
                             <h4> Pyramid Technology </h4>
                                     <div class="line"></div>
-                                    <p>When someone purchases or sells an EthPyramid Token (EPY), 10% of the buy/sell-in-price is split by the total number of coins and given as locked-in dividends to each previous investor based on how many coins they own. This is stored as price-locked EPY Tokens that nobody can touch but you!
+                                    <p>When someone purchases or sells an EthPyramid Token (EPY), 10% of the buy/sell-in-price is split by the total number of coins and given as locked-in dividends to each previous buyer based on how many coins they own.
                                     </p>
                         </div>
                         <div class="features-box mp col-4 feat-flexible">
@@ -167,7 +167,7 @@
                             </div>
                             <h4> Forever </h4>
                             <div class="line"></div>
-                            <p>Seriously, no premine, no self destruct, no exit scam. This contract will fluctuate in price and pay out dividends until the ethereum network dies. At any time, you can sell your tokens back to the Smart Contract for 90% of the current price, or withdraw/reinvest the dividends you've accumulated!
+                            <p>Seriously, no premine, no self destruct, no exit scam. This contract will fluctuate in price and pay out dividends until the Ethereum network dies. At any time, you can sell your tokens back to the smart contract for 80% of the current price, or withdraw/convert the dividends you've accumulated!
                             </p>
                         </div>
                     </div>
@@ -187,16 +187,16 @@
                                 <div class="container">
                                     <div class="sections">
                                 <h4 id="1">Q: Is this a real thing?</h4>
-                                <p>A: Yes, EthPyramid Tokens are built on the ethereum blockchain. They have no value outside of engaging in the EP game with our Math Robot though and you should not consider them a real investment.</p>
+                                <p>A: Yes, EthPyramid tokens are built on the Ethereum blockchain. They have no value outside of engaging in the EP game with our Math Robot though and you SHOULD NOT consider them a real investment or asset class with any intrinsic value OF ANY FORM.</p>
                              </div>
                              <div class="sections">
                                 <h4 id="3">Q: Wasn't there something similar to this earlier?</h4>
-                                <p>A: Yes, there are several variations of ponzis, pyramids, and other schemes; EthPyramid is the next step forward with reinvestable dividends and 10% redistribution on sell. 
+                                <p>A: Yes, there are several variations of ponzis, pyramids, and other schemes; EthPyramid is the next step forward with convertible dividends and 10% redistribution on sell.
 
                                 </p>                                    </div>
                              <div class="sections">
                                  <h4 id="4">Q: Is EthPyramid secure?</h4>
-                                 <p>Yes. Our dev team put a lot of hours into code work and testing to make sure your tokens are safe. Internal functions of the contract are not accessible to the end user.<p>
+                                 <p>Yes. Our dev team put a lot of time into refining and testing this contract to make sure your tokens are safe. Internal functions of the contract are not accessible to the end user.<p>
                               </div>
                              <div class="sections">
                                 <h4 id="5">Q: What do I need to buy into this Pyramid?</h4>
@@ -204,7 +204,7 @@
                              </div>
                              <div class="sections">
                                 <h4 id="6">Q: Is this coin pre-mined?</h4>
-                                <p>A: No, Nor are there any loops in the code that allow us to take ETH out of the contract in any ways that you yourself are not capable of.</p>
+                                <p>A: No. Nor are there any loops in the code that allow us to take Ether out of the contract in any ways that you yourself are not capable of.</p>
                              </div>
                                 </div>
                             </div>
