--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                     </div>
                                     <h4> Pyramid Technology</h4>
                                     <div class="line"></div>
-                                    <p>When someone purchases or sells an EthPyramid Token (EPY), 10% of the buy/sell price is split by the total number of coins and given as locked-in dividends (priced in Ether) to each previous buyer based on how many EPY tokens they own.
+                                    <p>When someone purchases or sells an EthPyramid token (EPY), 10% of the buy/sell price is split by the total number of coins and given as locked-in dividends (priced in Ether) to each previous buyer based on how many EPY tokens they own.
                                     </p>
                                 </div>
                             </li>
@@ -124,7 +124,7 @@
                                     </div>
                                     <h4> Dividends </h4>
                                     <div class="line"></div>
-                                    <p>10% ETH of every buy and sell will be rewarded to token holders. <b>STRONG HANDS</b> will be rewarded through every crash and pump. Our smart contract, unlike other schemes, also allows you to directly use your dividends to purchase more tokens.</p>
+                                    <p>10% of every buy and sell will be rewarded to token holders. <b>STRONG HANDS</b> will be rewarded through every crash and pump. Our smart contract, unlike other schemes, also allows you to directly use your dividends to purchase more tokens.</p>
                                     
                                 </div>
                             </li>
@@ -135,7 +135,7 @@
                                             </div>
                                             <h4> Forever </h4>
                                             <div class="line"></div>
-                                            <p>Seriously, no premine, no self destruct, no exit scam. This contract will fluctuate in price and pay out dividends until the Ethereum network dies. At any time, you can sell your tokens back to the smart contract for 80% of the current price, or withdraw/reinvest the dividends you've accumulated!
+                                            <p>Seriously, no premine, no self destruct, no exit scam. This contract will fluctuate in price and pay out dividends until the Ethereum network dies. At any time, you can sell your tokens back to the smart contract for 80% of the current price, or withdraw/convert the dividends you've accumulated!
                                             </p>
                                 </div>
                             </li>
@@ -148,7 +148,7 @@
                             </div>
                             <h4> Pyramid Technology</h4>
                                     <div class="line"></div>
-                                    <p>When someone purchases or sells an EthPyramid Token (EPY), 10% of the buy/sell-in-price is split by the total number of coins and given as locked-in dividends to each previous investor based on how many coins they own. This is stored as price-locked EPY Tokens that nobody can touch but you!
+                                    <p>When someone purchases or sells an EthPyramid token (EPY), 10% of the buy/sell-in-price is split by the total number of tokens and given as locked-in dividends to each previous buyer based on how many tokens they own.
                                     </p>
                         </div>
                         <div class="features-box mp col-4 feat-flexible">
@@ -157,7 +157,7 @@
                             </div>
                             <h4> Dividends </h4>
                             <div class="line"></div>
-                            <p>10% of every <strong>buy and sell</strong> will be rewarded to token holders. Strong hands will be rewarded through every crash and pump. The smart contract, unlike other schemes, will allow you to directly reinvest your dividends back into coins, increasing your ability to earn more dividends.</p> 
+                            <p>10% of every <strong>buy and sell</strong> will be rewarded to token holders. Strong hands will be rewarded through every crash and pump. The smart contract, unlike other schemes, will allow you to directly convert your dividends back into tokens, increasing your ability to earn more dividends.</p> 
                             
                         </div>
                         <div class="features-box mp col-4 feat-usable">
@@ -186,7 +186,7 @@
                                 <div class="container">
                                     <div class="sections">
                                 <h4 id="1">Q: Is this a real thing?</h4>
-                                <p>A: Yes, EthPyramid Tokens are built on the Ethereum blockchain. They have no value outside of engaging in the EP game with our Math Robot though and you should not consider them a real investment.</p>
+                                <p>A: Yes, EthPyramid Tokens are built on the Ethereum blockchain. They have no value outside of engaging in the EP game with our Math Robot though and you SHOULD NOT consider them a real investment or asset class with any intrinsic value OF ANY FORM.</p>
                              </div>
                              <div class="sections">
                                 <h4 id="3">Q: Wasn't there something similar to this earlier?</h4>
@@ -203,7 +203,7 @@
                              </div>
                              <div class="sections">
                                 <h4 id="6">Q: Is this coin pre-mined?</h4>
-                                <p>A: No. Nor are there any loops in the code that allow us to take ETH out of the contract in any ways that you yourself are not capable of.</p>
+                                <p>A: No. Nor are there any loops in the code that allow us to take Ether out of the contract in any ways that you yourself are not capable of.</p>
                              </div>
                                 </div>
                             </div>
