tweak tweak tweak

--- a/au/index.html
+++ b/au/index.html
@@ -114,7 +114,7 @@
                                     </div>
                                     <h4> Pyramid Technology</h4>
                                     <div class="line"></div>
-                                    <p>When someone purchases or sells an EthPyramid Token (EPY), 10% of the buy/sell price is split by the total number of coins and given as locked-in dividends (priced in Ether) to each previous buyer based on how many EPY tokens they own.
+                                    <p>When someone purchases or sells an EthPyramid Token (EPY), 10% of the buy/sell price is split by the total number of coins and given as locked-in dividends (priced in Ether) to all previous buyers based on how many EPY tokens they own.
                                     </p>
                                 </div>
                             </li>
@@ -123,7 +123,7 @@
                                     <div class="icon-main">
                                         <i class="fas fa-exchange-alt Straya"></i>
                                     </div>
-                                    <h4> Fair Dinkums.</h4>
+                                    <h4> Fair Dinkums</h4>
                                     <div class="line"></div>
                                     <p>10% of every buy and sell will be rewarded to token holders. <b>STRONG HANDS</b> will be rewarded through every crash and pump. Our smart contract, unlike other schemes, will allow you to directly use your dividends to purchase more tokens.</p>
                                     
@@ -134,7 +134,7 @@
                                         <div class="icon-main">
                                                 <i class="fas fa-sync-alt Straya"></i>
                                             </div>
-                                            <h4> Forever! Ripper! </h4>
+                                            <h4> Forever</h4>
                                             <div class="line"></div>
                                             <p>Seriously, no premine, no self destruct, no exit scam. This contract will fluctuate in price and pay out dividends until the Ethereum network dies. At any time, you can sell your tokens back to the smart contract for 80% of the current price, or withdraw/convert the dividends you've accumulated!
                                             </p>
@@ -149,16 +149,16 @@
                             </div>
                             <h4> Pyramid Technology </h4>
                                     <div class="line"></div>
-                                    <p>When someone purchases or sells an EthPyramid Token (EPY), 10% of the buy/sell-in-price is split by the total number of coins and given as locked-in dividends to each previous buyer based on how many coins they own.
+                                    <p>When someone purchases or sells an EthPyramid Token (EPY), 10% of the buy/sell-in-price is split by the total number of coins and given as locked-in dividends (priced in Ether) to all previous buyers based on how many EPY tokens they own.
                                     </p>
                         </div>
                         <div class="features-box mp col-4 feat-flexible">
                             <div class="icon-main">
                                 <i class="fas fa-exchange-alt Straya"></i>
                             </div>
-                            <h4> Dividends </h4>
+                            <h4> Fair Dinkums </h4>
                             <div class="line"></div>
-                            <p>10% ETH of every <strong>buy and sell</strong> will be rewarded to token holders. Strong hands will be rewarded through every crash and pump. Our smart contract, unlike other schemes, will allow you to directly reinvest your dividends back into coins, increasing your ability to earn more dividends.</p>
+                            <p>10% of every <strong>buy and sell</strong> will be rewarded to token holders. Strong hands will be rewarded through every crash and pump. Our smart contract, unlike other schemes, will allow you to directly reinvest your dividends back into coins, increasing your ability to earn more dividends.</p>
                             
                         </div>
                         <div class="features-box mp col-4 feat-usable">
