--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                             </div>
                             <h4> Pyramid Technology</h4>
                                     <div class="line"></div>
-                                    <p>When someone purchases or sells an EthPyramid token (EPY), 10% of the buy/sell-in-price is split by the total number of tokens and given as locked-in dividends to each previous buyer based on how many tokens they own.
+                                    <p>When someone purchases or sells an EthPyramid token (EPY), 10% of the buy/sell price is split by the total number of tokens and given as locked-in dividends (priced in Ether) to all previous buyers based on how many EPY tokens they own.
                                     </p>
                         </div>
                         <div class="features-box mp col-4 feat-flexible">
@@ -166,7 +166,7 @@
                             </div>
                             <h4> Forever </h4>
                             <div class="line"></div>
-                            <p>Seriously, no premine, no self destruct, no exit scam. This contract will fluctuate in price and pay out dividends until the ethereum network dies. At any time, you can sell your tokens back to the Smart Contract for 90% of the current price, or withdraw/reinvest the dividends you've accumulated!
+                            <p>Seriously, no premine, no self destruct, no exit scam. This contract will fluctuate in price and pay out dividends until the Ethereum network dies. At any time, you can sell your tokens back to the smart contract for 80% of the current price, or withdraw/convert the dividends you've accumulated!
                             </p>
                         </div>
                     </div>
