poke the whitepaper

--- a/whitepaper.html
+++ b/whitepaper.html
@@ -1162,7 +1162,7 @@
          <hr />
          <p><strong>FREQUENTLY ASKED QUESTIONS</strong></p>
          <p><strong>Q: Is this a real thing?</strong>
-            A: Yes, EthPyramid Tokens are an ERC20 standard token built on the Ethereum blockchain that you can sell on this site. They have no value outside of engaging in the EP game with our (highly overqualified) Math Robot though and you should under no circumstances consider them a real investment 
+            A: Yes, EthPyramid tokens are built on the Ethereum blockchain. They have no value outside of engaging in the EP game with our Math Robot though and you SHOULD NOT consider them a real investment or asset class with any intrinsic value OF ANY FORM. 
          </p>
          <p><strong>Q: Wasn't there something similar to this earlier?</strong>
             A: Yes, there are several variations of ponzis, pyramids, and other schemes; EthPyramid is the next step forward with convertible dividends and 10% redistribution on sell. Our (diverse and international) team has worked around the clock to prevent any bugs, errors and mistakes that other teams failed to spot in the contract code.
