--- a/es/coins.html
+++ b/es/coins.html
@@ -7,20 +7,20 @@
     <meta name="title" content="EthPyramid">
     <meta name="description" content="A better self-sustaining, secure and transparent pyramid scheme.">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="../favicon.ico">
-    <title> EthPyramid | AU | Buy/Sell Coins </title>
-    <link rel="stylesheet" href="../css/jquery.modal.min.css">
+    <link rel="shortcut icon" href="favicon.ico">
+    <title> EthPyramid | Buy/Sell Coins </title>
+    <link rel="stylesheet" href="css/jquery.modal.min.css">
     <!--custom stylesheet -->
-    <link rel="stylesheet" href="../css/main.css?1507783168">
+    <link rel="stylesheet" href="css/main.css?1507783168">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700" rel="stylesheet">
 		<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
-<script src="../js/jquery.min.js" type="text/javascript"></script>
-<script src="../js/quote.js" type="text/javascript"></script>
-<script src="../js/flipclock.min.js"></script>
-<link rel="stylesheet" href="../css/flipclock.css">
+<script src="js/jquery.min.js" type="text/javascript"></script>
+<script src="js/quote.js" type="text/javascript"></script>
+<script src="js/flipclock.min.js"></script>
+<link rel="stylesheet" href="css/flipclock.css">
 <link rel="icon" 
       type="image/png" 
-      href="../favicon.ico">
+      href="favicon.ico">
 	  <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113460032-1"></script>
 <script>
@@ -37,12 +37,12 @@
   <!-- End Google Tag Manager (noscript) -->
 <div class="main-outer text-center faq-main">
     <div class="introduction-banner">
-        <div class="header sticky-header Straya">
+        <div class="header sticky-header">
 		<div class="flagBits">
-        <a href="../au/coins.html"><img src="../images/AU.jpg"></a>
-        <a href="../coins.html"><img src="../images/UK.jpg"></a>
-		<a href="../fr/coins.html"><img src="../images/FR.jpg"></a>
-        <a href="../de/coins.html"><img src="../images/DE.jpg"></a>
+        <a href="coins.html"><img src="images/UK.jpg"></a>
+		<a href="au/coins.html"><img src="images/AU.jpg"></a>
+		<a href="fr/coins.html"><img src="images/FR.jpg"></a>
+        <a href="de/coins.html"><img src="images/DE.jpg"></a>
 		</div>
 				<div class="socialBits">
 		<a href="https://twitter.com/ethpyramid" target="_blank"><i class="fab fa-twitter-square" style="margin-right:10px; color:white;"></i></a>
@@ -53,7 +53,7 @@
                 <div class="container clearfix">
                     <div class="logo">
                         <a href="index.html">
-                            <img src="../images/minilogo.png" alt="">
+                            <img src="images/minilogo.png" alt="">
                         </a>
                     </div>
                     <div id="nav-icon">
@@ -64,12 +64,12 @@
                         <ul>
                             <li><a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" target="_blank">Smart Contract</a>
                             </li>
-                            <li><a href="coins.html">My Moolah</a>
+                            <li><a href="coins.html">My Coins</a>
 							<li><a href="https://blog.ethpyramid.com"><span style="color:#FF4444">NEW!   </span>Blog</a>
                             </li>
                             </li>
                             <li>
-                                <a href="../whitepaper.html" target="_blank">Whitepaper</a>
+                                <a href="whitepaper.html" target="_blank">Whitepaper</a>
                             </li>
                         </ul>
                     </div>
@@ -78,12 +78,12 @@
         </div>
         <div class="faq-main-content">
 
-		<div class="faq-header text-center Straya">
-                            <h2 style="color:#d69361">Purchase EthPyramid Tokens, cobber</h2>
+		<div class="faq-header text-center">
+                            <h2 style="color:#d69361">Purchase EthPyramid Tokens</h2>
 							<div id="quoteDisplay"></div>
 							<script>newQuote()</script>
                         </div>
-                        <script type="text/javascript" src="../js/poh.js"></script>
+                        <script type="text/javascript" src="js/poh.js"></script>
 
                         <div id="token-sale" class="token-bg nochat">
                                 <div class="outer-container">
@@ -97,7 +97,7 @@
                                                 <div class="row top-row clearfix">
                                                     <div class="col-4">
                                                         <div class="buy-eos">
-                                                            <img src="../images/spinning.gif" class="Straya" alt="" style="margin-bottom: 20px;">
+                                                            <img src="images/spinning.gif" alt="" style="margin-bottom: 20px;">
                                                             <input type="number" id="purchase-amount" class="form-control" placeholder="Amount in ETH (e.g. 0.5)">
                                                             <button id="buy-eos-tokens" class='cta' >BUY Tokens</button>
                                                         </div>
@@ -205,7 +205,7 @@
                                                                         <button id="sell-tokens-btn-m" class='cta' >Sell Tokens</button>
 
                                                                         <div class="line"></div>
-                                                                        <p>Your tokens will be sold at the sell-price and will be converted into dividends balance.</p>
+                                                                        <p>Your tokens will be sold at the sell-price and will be converted into Ether dividends.</p>
                                                                     </div>
                                                                 </li>
                                                                 <li>
@@ -213,7 +213,7 @@
 
                                                                         <button id="reinvest-btn-m" class='cta' >Buy With Dividends</button>
                                                                         <div class="line"></div>
-                                                                        <p>Reinvest your dividends into tokens.</p>
+                                                                        <p>Swap your dividends for more tokens.</p>
                                                                     </div>
                                                                 </li>
                                                                 <li>
@@ -221,7 +221,7 @@
 
                                                                         <button id="withdraw-btn-m" class='cta' >Withdraw</button>
                                                                         <div class="line"></div>
-                                                                        <p>Withdraw your dividends balance back into your Ethereum wallet.</p>
+                                                                        <p>Withdraw your dividends to your Ethereum wallet.</p>
                                                                     </div>
                                                                 </li>
                                                             </ul>
@@ -231,7 +231,7 @@
                                                                 <div class="features-box col-4 feat-scalable">
                                                                         <button id="sell-tokens-btn" class='cta' >Sell Tokens</button>
 
-                                                                        <p>Your tokens will be sold at the sell-price and will be converted into dividends balance.</p>
+                                                                        <p>Your tokens will be sold at the sell-price and will be converted into Ether dividends.</p>
                                                                 </div>
                                                                 <div class="features-box col-4 feat-flexible">
                                                                         <button id="reinvest-btn" class='cta' >Buy With Dividends</button>
@@ -275,31 +275,31 @@
 							<div class="container" style="margin-top:50px; border-bottom: 1px solid white; padding-bottom: 20px; margin-bottom: 40px;">
 	<h5 style="color:white;">Instructions for those who want to help build the great pyramid of Ether:</h5>
 	<p></p><li>First of all, install MetaMask <a href="https://metamask.io/">here</a> and put some Ether in it.</li><p></p>
-	<p></p><li>To buy EPY, simply click the "Buy Tokens" button and enter the amount of Ether you want to convert to EPY, based on the current Buy Price. Press the "Yep" button twice (do not ignore the warning).
+	<p></p><li>To buy EPY, simply click the "Buy Tokens" button and enter the amount of Ether you want to convert to EPY, based on the current Buy Price.
 	When confirming the transaction on MetaMask, be sure to use a high enough gas price so that the price doesn't change drastically while the transaction is in progress.
 	<a href="https://ethgasstation.info/">Here</a> you can view recommended gas prices.
 	Buying coins will increase both the Buy Price and Sell Price with 0.25% per bought coin once the transaction is complete.</li><p></p>
 	<p></p><li>Under "EthPyramid Token Balance" you can see how many EPY you currently own.
 	Note that when cashing out coins, the Buy Price and Sell Price drop afterwards, decreasing the value of your (and everyone else's) coins by 0.25% per coin.</li><p></p>
 	<p></p><li>Every time EPY are bought or sold, a percentage of the fee from the bought/sold coins will be divided under the current EPY holders (Dividends).</li><p></p>
-	<p></p><li>You can move your tokens into Dividends which then is stored as Ethereum. To do this click on the "Sell Tokens" Button and your tokens will be transfered into your dividends balance.</li><p></p>
-	<p></p><li>You can also reinvest your Dividends directly into your EPY balance by selecting "Reinvest".</li><p></p>
+	<p></p><li>You can move your tokens into Dividends which then is stored as Ether. To do this click on the "Sell Tokens" button - and your tokens will be transferred into Ether based upon the current sell price.</li><p></p>
+	<p></p><li>You can also use your dividends to immediately purchase more EPY tokens by selecting "Buy With Dividends".</li><p></p>
 	<p></p><li>To cash out your coins, click the "Withdraw" button and follow the prompts.</li><p></p>
 	<p></p><li><b>PLEASE SAVE THIS SOMEWHERE SAFE:</b> If for any reason this website goes down, you can open up a Transaction through Metamask, Send 0 Ether with a 150k Gas Limit to the Contract at "0x2fa0ac498d01632f959d3c18e38f4390b005e200" and send "0xb1e35242" under additional data for a personal exit scheme. This is the getMeOutOfHere() function on the contract and will cash you out of all tokens and dividends. </li><p></p>
 </div>
 							<div class="container">	
                             <div class="sections">
                                 <h4 id="1">Q: Is this a real thing?</h4>
-                                <p>A: Yes, EthPyramid Tokens are built on the ethereum blockchain. They have no value outside of engaging in the EP game with our Math Robot though and you SHOULD NOT consider them a real investment or asset class with any intrinsic value OF ANY FORM.</p>
+                                <p>A: Yes, EthPyramid Tokens are built on the Ethereum blockchain. They have no value outside of engaging in the EP game with our Math Robot though and you SHOULD NOT consider them a real investment or asset class with any intrinsic value OF ANY FORM.</p>
                              </div>
                              <div class="sections">
                                 <h4 id="2">Q: Wasn't there something similar to this earlier?</h4>
-                                <p>A: Yes, there are several variations of ponzis, pyramids, and other schemes; EthPyramid is the next step forward with the option to immediately purchase more tokens with dividends and 10% redistribution on sell. 
+                                <p>A: Yes, there are several variations of ponzis, pyramids, and other schemes; EthPyramid is the step forward with the option to immediately purchase more tokens with dividends and 10% redistribution on sell. 
 
                                 </p>                                    </div>
                              <div class="sections">
                                  <h4 id="3">Q: Is EthPyramid secure?</h4>
-                                 <p>Yes. Our dev team put a lot of time into refining and testing this contract to make sure your tokens are safe. Internal functions of the contract are not accessible to the end user.<p>
+                                 <p>Yes. Our dev team put a lot of hours into code work and testing to make sure your tokens are safe. Internal functions of the contract are not accessible to the end user.<p>
                               </div>
                              <div class="sections">
                                 <h4 id="4">Q: What do I need to buy into this Pyramid?</h4>
@@ -307,7 +307,7 @@
                              </div>
                              <div class="sections">
                                 <h4 id="5">Q: Is this coin pre-mined?</h4>
-                                <p>A: No. Nor are there any loops in the code that allow us to take Ether out of the contract in any ways that you yourself are not capable of.</p>
+                                <p>A: No, Nor are there any loops in the code that allow us to take ETH out of the contract in any ways that you yourself are not capable of.</p>
                              </div>
 							 </div>
                 <div id="root"></div>
