Spanish mostly done except for white paper and needing to replace the flag.
I want the flag to be from the same icon set as the others. Web-devs, please stack up /images with as many as you can.

Also, is it possible to either have a 2 x 4 matrix of flags, or push the minilogo to the right a bit? The fifth flag covers it.

--- a/es/index.html
+++ b/es/index.html
@@ -40,9 +40,10 @@
     <div class="introduction-banner">
         <div class="header sticky-header">
 		<div class="flagBits">
-		<a href="#"><img src="../images/FR.jpg"></a>
+		<a href="#"><img src="../images/ES.jpg"></a>
 		<a href="../index.html"><img src="../images/UK.jpg"></a>
 		<a href="../au/index.html"><img src="../images/AU.jpg"></a>
+		<a href="../fr/index.html"><img src="../images/FR.jpg"></a>
         <a href="../de/index.html"><img src="../images/DE.jpg"></a>
 		</div>
 		<div class="socialBits">
@@ -65,7 +66,7 @@
                         <ul>
                             <li><a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" target="_blank">Contrato Inteligente</a>
                             </li>
-                            <li><a href="coins.html">Mis Monedas</a>
+                            <li><a href="coins.html">Mis Tokens</a>
                             </li>
 							<li><a href="https://blog.ethpyramid.com"><span style="color:#FF4444">NUEVO!   </span>Blog</a>
                             </li>
@@ -113,7 +114,7 @@
                                     </div>
                                     <h4>Tecnología Piramidal</h4>
                                     <div class="line"></div>
-                                    <p>Cuando alguien compra o vende un token de Ethpyramid (EPY), 10% del precio de compra/venta se divide entre el número total de monedas en posesión de los inversores previos según la cantidad de monedas que poseen. ¡Estos dividendos son fijos, en Ethereum, que nadie excepto tú puedes tocar!</p>
+                                    <p>Cuando alguien compra o vende un token de Ethpyramid (EPY), 10% del precio de compra/venta se divide entre el número total de tokens en posesión de los inversores previos según la cantidad de tokens que poseen. ¡Estos dividendos son fijos, en Ethereum, que nadie excepto tú puedes tocar!</p>
                                 </div>
                             </li>
                             <li>
@@ -123,7 +124,7 @@
                                     </div>
                                     <h4>Dividendos</h4>
                                     <div class="line"></div>
-                                    <p>10% de cada compra y venta se destina a recompensar a los que poseen la moneda. Los que tengan las manos flojas no serán recompensados en cada subida y bajada. El contrato inteligente (smart contract), a diferencia de otros esquemas, te permitirá volver a invertir directamente tus dividendos en monedas, incrementando tu habilidad de ganar más dividendos.</p>
+                                    <p>10% de cada compra y venta se destina a recompensar a los que poseen la moneda. Los que tengan las manos flojas no serán recompensados en cada subida y bajada. El contrato inteligente (smart contract), a diferencia de otros esquemas, te permitirá volver a invertir directamente tus dividendos en tokens, incrementando tu habilidad de ganar más dividendos.</p>
 
                                 </div>
                             </li>
@@ -134,7 +135,7 @@
                                             </div>
                                             <h4>Para Siempre</h4>
                                             <div class="line"></div>
-                                            <p>En serio, sin monedas pre-minadas, sin códigos de autodestrucción y sin salidas por la puerta de atrás de los desarrolladores. Este contrato fluctuará en precio y pagará dividendos hasta que la red Ethereum muera. En cualquier momento tu puedes vender tus monedas de vuelta al contrato inteligente por un 80% del precio actual o retirar/reinvertir los dividendos que has acumulado.</p>
+                                            <p>En serio, sin tokens pre-minadas, sin códigos de autodestrucción y sin salidas por la puerta de atrás de los desarrolladores. Este contrato fluctuará en precio y pagará dividendos hasta que la red Ethereum muera. En cualquier momento tu puedes vender tus tokens de vuelta al contrato inteligente por un 80% del precio actual o retirar/reinvertir los dividendos que has acumulado.</p>
                         </div>
                             </li>
                         </ul>
@@ -146,7 +147,7 @@
                             </div>
                             <h4>Tecnología Piramidal</h4>
                                     <div class="line"></div>
-                                    <p>Cuando alguien compra o vende un token de EthPyramid (EPY), 10% del precio de compra/venta se divide entre el número total de monedas en posesión de los inversores previos según la cantidad de monedas que poseen. ¡Estos dividendos son fijos, en Ethereum, que nadie excepto tú puedes tocar!</p>
+                                    <p>Cuando alguien compra o vende un token de EthPyramid (EPY), 10% del precio de compra/venta se divide entre el número total de tokens en posesión de los inversores previos según la cantidad de tokens que poseen. ¡Estos dividendos son fijos, en Ethereum, que nadie excepto tú puedes tocar!</p>
                         </div>
                         <div class="features-box mp col-4 feat-flexible">
                             <div class="icon-main">
@@ -154,7 +155,7 @@
                             </div>
                             <h4>Dividendos</h4>
                             <div class="line"></div>
-                            <p>10% de cada compra y venta se destina a recompensar a los que poseen la moneda. Los que tengan las manos flojas no serán recompensados en cada subida y bajada. El contrato inteligente (smart contract), a diferencia de otros esquemas, te permitirá volver a invertir directamente tus dividendos en monedas, incrementando tu habilidad de ganar más dividendos.</p>
+                            <p>10% de cada compra y venta se destina a recompensar a los que poseen la moneda. Los que tengan las manos flojas no serán recompensados en cada subida y bajada. El contrato inteligente (smart contract), a diferencia de otros esquemas, te permitirá volver a invertir directamente tus dividendos en tokens, incrementando tu habilidad de ganar más dividendos.</p>
 
                         </div>
                         <div class="features-box mp col-4 feat-usable">
@@ -163,7 +164,7 @@
                             </div>
                             <h4>Para Siempre</h4>
                             <div class="line"></div>
-                            <p>En serio, sin monedas pre-minadas, sin códigos de autodestrucción y sin salidas por la puerta de atrás de los desarrolladores. Este contrato fluctuará en precio y pagará dividendos hasta que la red Ethereum muera. En cualquier momento tu puedes vender tus monedas de vuelta al contrato inteligente por un 80% del precio actual o retirar/reinvertir los dividendos que has acumulado.</p>
+                            <p>En serio, sin tokens pre-minadas, sin códigos de autodestrucción y sin salidas por la puerta de atrás de los desarrolladores. Este contrato fluctuará en precio y pagará dividendos hasta que la red Ethereum muera. En cualquier momento tu puedes vender tus tokens de vuelta al contrato inteligente por un 80% del precio actual o retirar/reinvertir los dividendos que has acumulado.</p>
                         </div>
                     </div>
 
@@ -188,14 +189,14 @@
                                 <h4 id="2">P: ¿No había ya algo similar a esto previamente?</h4>
                                 <p>R: Sí, hay varias variaciones de ponzis, pirámides y otros esquemas; EthPyramid es el siguiente paso con dividendos reinvertibles y una redistribución del 10% en ventas. Nuestro equipo (diverso e internacional) ha trabajado día y noche para evitar cualquier bug, error o falla que otros equipos no detectaron en el código del contrato.</p>
 								</div>
-                             <div class="sections">
-                                <h4 id="3">P: ¿No había ya algo similar a esto previamente?</h4>
-                                <p>R: Sí, hay varias variaciones de ponzis, pirámides y otros esquemas; EthPyramid es el siguiente paso con dividendos reinvertibles y una redistribución del 10% en ventas. Nuestro equipo (diverso e internacional) ha trabajado día y noche para evitar cualquier bug, error o falla que otros equipos no detectaron en el código del contrato.</p>
-								</div>							 
 							 <div class="sections">
-                                 <h4 id="4">P: Entonces, ¿qué necesito para ayudar a construir esta pirámide?</h4>
+                                 <h4 id="3">P: Entonces, ¿qué necesito para ayudar a construir esta pirámide?</h4>
                                  <p>R: Necesitará tener algo de Ethereum en un complemento para navegadores llamado Metamask. Esta aplicación maneja sin problemas las transferencias de su billetera generada al contrato inteligente. Siga las instrucciones en su página web: <a href="https://metamask.io">https://metamask.io/</a>. Hay muchos mercados en donde se puede comprar Ethereum, dependiendo del país donde viva. Algunos mercados populares para transferencias fiat son: Coinbase, Gemini, Quadrigacx, Bittylicious, etc.</p>
 							 </div>
+                             <div class="sections">
+                                <h4 id="4">P: ¿Esta moneda está preminada?</h4>
+                                <p>P: ¿Esta moneda está preminada? R: No, ni hay salidas en el código que nos permitan eliminar ETH del contrato de ninguna manera que usted no sea capaz de hacerlo. Este es un modelo de pirámide basado en el desarrollo de su base, libre de fraude y explotación, autosostenible, que recompensa y promueve la estabilidad a largo plazo y, por lo tanto, una clase de activos completamente nueva.</p>
+								</div>	
 							 </div>
                             </div>
                         </div>
