--- a/fr/coins.html
+++ b/fr/coins.html
@@ -98,7 +98,7 @@
                                                     <div class="col-4">
                                                         <div class="buy-eos">
                                                             <img src="../images/spinning.gif" alt="" style="margin-bottom: 20px;">
-                                                            <input type="number" id="purchase-amount" class="form-control" placeholder="Quantité de ETH à convertir (par exemple 0.5)">
+                                                            <input type="number" id="purchase-amount" class="form-control" placeholder="Quantité de ETH (p.e. 0.5)">
                                                             <button id="buy-eos-tokens" class='cta' >Acheter</button>
                                                         </div>
                                                         <div class="currency-selector">
@@ -145,14 +145,14 @@
                                                                 <div class="row">
                                                                     <div class="col">
                                                                         <div class="PriceBox">
-                                                                        <p>Prix d'achat</p>
+                                                                        <p>Prix D'achat</p>
                                                                             <div class="poh-buy count"></div>
                                                                             <div class="usd-buy usdprice"></div>
                                                                         </div>
                                                                     </div>
                                                                     <div class="col">
                                                                         <div class="PriceBox">
-                                                                            <p>Prix de vente</p>
+                                                                            <p>Prix de Vente</p>
                                                                             <div class="poh-sell count"></div>
                                                                             <div class="usd-sell usdprice"></div>
 
