--- a/coins.html
+++ b/coins.html
@@ -99,7 +99,7 @@
                                                         <div class="buy-eos">
                                                             <img src="images/spinning.gif" alt="" style="margin-bottom: 20px;">
                                                             <input type="number" id="purchase-amount" class="form-control" placeholder="Amount in ETH (e.g. 0.5)">
-                                                            <button id="buy-eos-tokens" class='cta' >BUY Tokens</button>
+                                                            <button id="buy-eos-tokens" class='cta' >Buy Tokens</button>
                                                         </div>
                                                         <div class="currency-selector">
                                                             Select your currency:
