Linked up the other pages to the Spanish page.
SWIM please clean up thx

--- a/au/index.html
+++ b/au/index.html
@@ -42,8 +42,9 @@
 		<div class="flagBits">
 		<a href="#"><img src="../images/AU.jpg"></a>
 		<a href="../index.html"><img src="../images/UK.jpg"></a>
-		<a href="../fr/coins.html"><img src="../images/FR.jpg"></a>
         <a href="../de/coins.html"><img src="../images/DE.jpg"></a>
+        <a href="../es/coins.html"><img src="../images/ES.JPG"></a>
+		<a href="../fr/coins.html"><img src="../images/FR.jpg"></a>
 		</div>
 		<div class="socialBits">
 		<a href="https://twitter.com/ethpyramid" target="_blank"><i class="fab fa-twitter-square" style="margin-right:10px; color:white;"></i></a>
