--- a/fr/coins.html
+++ b/fr/coins.html
@@ -43,6 +43,7 @@
 		<a href="../coins.html"><img src="../images/UK.jpg"></a>
 		<a href="../au/coins.html"><img src="../images/AU.jpg"></a>
         <a href="../de/coins.html"><img src="../images/DE.jpg"></a>
+        <a href="../es/coins.html"><img src="../images/ES.JPG"></a>
 		</div>
 				<div class="socialBits">
 		<a href="https://twitter.com/ethpyramid" target="_blank"><i class="fab fa-twitter-square" style="margin-right:10px; color:white;"></i></a>
