--- a/fr/index.html
+++ b/fr/index.html
@@ -44,6 +44,7 @@
 		<a href="../index.html"><img src="../images/UK.jpg"></a>
 		<a href="../au/index.html"><img src="../images/AU.jpg"></a>
         <a href="../de/index.html"><img src="../images/DE.jpg"></a>
+        <a href="../es/index.html"><img src="../images/ES.JPG"></a>
 		</div>
 		<div class="socialBits">
 		<a href="https://twitter.com/ethpyramid" target="_blank"><i class="fab fa-twitter-square" style="margin-right:10px; color:white;"></i></a>
