--- a/es/coins.html
+++ b/es/coins.html
@@ -161,7 +161,7 @@
                                                                     </div>
                                                                     <div class="col">
                                                                         <div class="PriceBox">
-                                                                        <p>Cantidad de Tokens EthPyramide:</p>
+                                                                        <p>Cantidad de Tokens EthPyramid:</p>
                                                                         <div class="poh-balance count"></div>
 
                                                                         </div>
