Altered Spanish flag to line up with others

--- a/de/index.html
+++ b/de/index.html
@@ -41,7 +41,7 @@
                     <a href="../de/index.html"><img src="../images/DE.jpg"></a>
                     <a href="../index.html"><img src="../images/UK.jpg"></a>
                     <a href="../au/index.html"><img src="../images/AU.jpg"></a>
-                    <a href="../es/index.html"><img src="../images/ES.JPG"></a>
+                    <a href="../es/index.html"><img src="../images/ES.jpg"></a>
                     <a href="../fr/index.html"><img src="../images/FR.jpg"></a>
                 </div>
                 <div class="socialBits">
