--- a/au/index.html
+++ b/au/index.html
@@ -43,7 +43,7 @@
 		<a href="#"><img src="../images/AU.jpg"></a>
 		<a href="../index.html"><img src="../images/UK.jpg"></a>
         <a href="../de/coins.html"><img src="../images/DE.jpg"></a>
-        <a href="../es/coins.html"><img src="../images/ES.JPG"></a>
+        <a href="../es/coins.html"><img src="../images/ES.jpg"></a>
 		<a href="../fr/coins.html"><img src="../images/FR.jpg"></a>
 		</div>
 		<div class="socialBits">
