--- a/es/coins.html
+++ b/es/coins.html
@@ -39,7 +39,7 @@
     <div class="introduction-banner">
         <div class="header sticky-header">
 		<div class="flagBits">
-		<a href="#"><img src="../images/ES.JPG"></a>
+		<a href="#"><img src="../images/ES.jpg"></a>
 		<a href="../coins.html"><img src="../images/UK.jpg"></a>
 		<a href="../au/coins.html"><img src="../images/AU.jpg"></a>
         <a href="../fr/coins.html"><img src="../images/FR.jpg"></a>
