Stupid bloody case sensitivity...

--- a/au/coins.html
+++ b/au/coins.html
@@ -42,7 +42,7 @@
         <a href="../au/coins.html"><img src="../images/AU.jpg"></a>
         <a href="../coins.html"><img src="../images/UK.jpg"></a>
         <a href="../de/coins.html"><img src="../images/DE.jpg"></a>
-        <a href="../es/coins.html"><img src="../images/ES.jpg"></a>
+        <a href="../es/coins.html"><img src="../images/SP.jpg"></a>
 		<a href="../fr/coins.html"><img src="../images/FR.jpg"></a>
 		</div>
 				<div class="socialBits">
