--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<a href="au/index.html"><img src="images/AU.jpg"></a>
 		<a href="fr/index.html"><img src="images/FR.jpg"></a>
         <a href="de/index.html"><img src="images/DE.jpg"></a>
-        <a href="es/index.html"><img src="images/ES.jpg"></a>
+        <a href="es/index.html"><img src="images/SP.jpg"></a>
 		</div>
 		<div class="socialBits">
 		<a href="https://twitter.com/ethpyramid" target="_blank"><i class="fab fa-twitter-square" style="margin-right:10px; color:white;"></i></a>
