--- a/es/index.html
+++ b/es/index.html
@@ -40,7 +40,7 @@
     <div class="introduction-banner">
         <div class="header sticky-header">
 		<div class="flagBits">
-		<a href="#"><img src="../images/ES.jpg"></a>
+		<a href="#"><img src="../images/SP.jpg"></a>
 		<a href="../index.html"><img src="../images/UK.jpg"></a>
 		<a href="../au/index.html"><img src="../images/AU.jpg"></a>
 		<a href="../fr/index.html"><img src="../images/FR.jpg"></a>
