--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 		<div class="flagBits">
         <a href="index.html"><img src="images/UK.jpg"></a>
 		<a href="au/index.html"><img src="images/AU.jpg"></a>
+		<a href="https://img.memecdn.com/soon-my-friend-soon_o_175785.jpg"><img src="images/CN.jpg"></a>
+		<a href="https://img.memecdn.com/soon-my-friend-soon_o_175785.jpg"><img src="images/KR.jpg"></a>
 		<a href="fr/index.html"><img src="images/FR.jpg"></a>
         <a href="de/index.html"><img src="images/DE.jpg"></a>
         <a href="es/index.html"><img src="images/SP.jpg"></a>
